# pyossmtool

./: .codespellignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyaitools.yaml  pyaitools.yaml.example  pyossmtool.yaml  pyossmtool.yaml.example  pyproject.toml  shipgate.yaml  shipgate.yaml.example
.github/workflows/: ci.yml  python-publish.yml
.shipgate/allowlists/: folder-breadth.txt  module-private-vars.txt
.shipgate/catalog/checks/: deadcode.scan.yaml  radon.cc.yaml  radon.mi.yaml
catalog/checks/: bandit.scan.yaml  codespell.spelling.yaml  deadcode.scan.yaml  gate.acronym-allowlist.yaml  gate.folder-breadth.yaml  gate.module-private-vars.yaml  gate.module-size.yaml  gitleaks.secrets.yaml  hadolint.dockerfile.yaml  jscpd.duplication.yaml  markdownlint.check.yaml  mdformat.format.yaml  mutmut.run.yaml  pydeps.cycles.yaml  pytest.coverage.yaml  pytest.test.yaml  radon.cc.yaml  radon.mi.yaml  ruff.format.yaml  ruff.lint.yaml  ruff.unused.yaml  semgrep.scan.yaml  shellcheck.yaml  shfmt.format.yaml  sourcery.review.yaml  ty.check.yaml  vulture.scan.yaml  yamlfmt.format.yaml  yamllint.check.yaml
catalog/tools/: bandit.yaml  codespell.yaml  deadcode.yaml  gitleaks.yaml  hadolint.yaml  jscpd.yaml  markdownlint.yaml  mdformat.yaml  mutmut.yaml  pydeps.yaml  pytest.yaml  radon.yaml  ruff.yaml  semgrep.yaml  shfmt.yaml  sourcery.yaml  ty.yaml  vulture.yaml  yamlfmt.yaml  yamllint.yaml
defaults/allowlists/: module-size.txt
defaults/configs/: markdownlint.json  yamlfmt.yaml  yamllint.yaml
defaults/configs/gates/: folder-breadth.yaml  module-private-vars.yaml  module-size.yaml
defaults/gates/: README.md  folder-breadth.sh  lib.sh  module-private-vars.sh  module-size.sh
defaults/semgrep/: python-quality.yml
docs/superpowers/plans/: 2026-07-16-parser-registry.md
docs/superpowers/specs/: 2026-07-16-parser-registry-design.md  2026-07-16-pyossmtool-0.0.1-design.md
reports/: code_quality_standardization_report.md  reslab-quality-tools-inventory.md
reports/bandit-security/20260709-080521/: raw_output.json
reports/jscpd-duplication/20260709-074526/: stderr.json
reports/jscpd-duplication/20260709-074535/: stderr.json
reports/jscpd-duplication/20260709-074557/: raw_output.json
reports/radon-complexity/20260709-074513/: raw_output.json
reports/ruff-linter/20260709-074211/: stderr.json
reports/shellcheck/20260709-080521/: raw_output.json
sample_files/: example.sh  example1.py  example2.py  example3.py
src/pyaitools/: __init__.py  cli.py  config_resolver.py  gate_config.py  gates.py  ignore.py  ignore_materialize.py  installer.py  models.py  parsers.py  registry.py  reporter.py  resolver.py  runner.py  runner_script.py  target_expand.py
src/pyaitools/bundle/catalog/checks/: markdownlint.check.yaml  mdformat.format.yaml  vulture.scan.yaml
src/pyaitools/bundle/catalog/tools/: markdownlint.yaml  mdformat.yaml  script.yaml  semgrep.yaml
src/pyaitools/bundle/defaults/allowlists/: acronyms.yaml
src/pyaitools/bundle/defaults/gates/: acronym-allowlist.sh  module-private-vars.sh  module-size.sh
src/pyaitools/bundle/defaults/semgrep/: python-quality.yml
src/pyaitools/parsers/: __init__.py  analysis.py  analysis_parsers.py  base.py  common.py  format_parsers.py  format_text.py  gate_parsers.py  gates.py  patterns.py  prose.py  prose_parsers.py  python_parsers.py  ruff.py  shell.py
src/pyaitools/policy/: acronym_allowlist.py  folder_breadth.py
src/pyossmtool/: __init__.py  cli.py  config_resolver.py  discovery.py  gate_config.py  gates.py  ignore.py  ignore_materialize.py  installer.py  models.py  registry.py  reporter.py  resolver.py  runner.py  runner_script.py  target_expand.py
src/pyossmtool/bundle/suites/: demo.yaml  extended.yaml  format.yaml  formatting.yaml  policy.yaml  python-quality.yaml  reslab-parity.yaml  standard.yaml
src/pyossmtool/parsers/: __init__.py  analysis.py  base.py  common.py  format_text.py  gates.py  patterns.py  prose.py  ruff.py  shell.py
src/pyossmtool/policy/: acronym_allowlist.py  folder_breadth.py
src/shipgate/: __init__.py  cli.py  cli_aliases.py  config_resolver.py  constants.py  discovery.py  error_formatters.py  gate_config.py  gate_sdk.py  gates.py  ignore.py  ignore_materialize.py  installer.py  models.py  overrides.py  paths.py  registry.py  reporter.py  resolver.py  runner.py  runner_script.py  target_expand.py  tool_scaffold.py
src/shipgate/bundle/suites/: all-lint.yaml  all.yaml  demo.yaml  extended.yaml  formatting.yaml  policy.yaml  python-quality.yaml  reslab-parity.yaml  standard.yaml
src/shipgate/parsers/: __init__.py  analysis.py  base.py  common.py  format_text.py  gates.py  patterns.py  prose.py  ruff.py  shell.py
src/shipgate/policy/: acronym_allowlist.py  folder_breadth.py
src/shipgate/server/: __init__.py  app.py  cli.py  finding_context.py  ingest.py  models.py  orchestrator.py  requirements.py  tool_versions.py  worktree.py
src/shipgate/server/storage/: __init__.py  base.py  sqlite.py
src/shipgate/server/templates/: base.html  findings.html  new_run.html  overview.html  runs.html  tools.html
suites/: demo.yaml  extended.yaml  formatting.yaml  policy.yaml  python-quality.yaml  reslab-parity.yaml  standard.yaml
tests/: conftest.py  test_all_lint_suite.py  test_check_modes.py  test_cli.py  test_cli_extended.py  test_config_and_targets.py  test_discovery.py  test_error_formatters.py  test_finding_context.py  test_format_shell_parsers.py  test_gate_config.py  test_gate_sdk.py  test_ignore.py  test_mdformat_parser.py  test_mutmut_pydeps_parsers.py  test_npm_install.py  test_packaging.py  test_parser_registry.py  test_path_and_parser_fixes.py  test_project_env_launch.py  test_quality_coverage_boost.py  test_ruff_format_parser.py  test_script_gates.py  test_server_app.py  test_server_cli.py  test_server_ingest.py  test_server_orchestrator.py  test_server_packaging.py  test_server_storage.py  test_server_worktree.py  test_tool_versions.py  test_tools_root.py  test_wheel_install.py
(+112 files in other folders)
