[project]
name = "pyossmtool"
version = "0.0.1"
description = "Quality-gate orchestrator for AI-assisted development"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Vishal Kumar Mishra", email = "vishal.k.mishra2@gmail.com" },
]
keywords = [
  "quality",
  "lint",
  "format",
  "pre-commit",
  "python",
  "static-analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.0",
  "pathspec>=0.12",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.urls]
Changelog = "https://github.com/inquilabee/pyaitools/blob/main/CHANGELOG.md"
Homepage = "https://github.com/inquilabee/pyaitools"
Issues = "https://github.com/inquilabee/pyaitools/issues"
Repository = "https://github.com/inquilabee/pyaitools"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.11.0",
]

[project.scripts]
pyossmtool = "pyossmtool.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyossmtool = ["py.typed", "bundle/**/*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-m",
  "not integration",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
]
markers = [
  "integration: tests that build wheels, install packages, or require external binaries/network",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ty]
# Repo-owned config; wins over bundled defaults when configs.mode=auto

[tool.bandit]
skips = ["B404", "B603", "B607"]

[tool.codespell]
ignore-words-list = "IST,fullfilled"
